--- a/landingpage/main.css
+++ b/landingpage/main.css
@@ -92,7 +92,11 @@ body, .nav, .menu {
     align-items: center;
 }
 .carro{
-    
+    background-color: #219CE1;
+    position: absolute;
+    top: 0px;
+    left: -110px;
+    height: 400px;
 }
 .carro img{
     width: 30%;
@@ -110,8 +114,12 @@ width: 7%;
 height: 7%;
 cursor: pointer;
 transform: rotate(180deg);
+position: relative;
+left: 800px;
 }
 #pontos{
     width: 15%;
     height: 15%;
+    position: relative;
+    left: 500px;
 }
