--- a/login/login.css
+++ b/login/login.css
@@ -5,6 +5,8 @@ body {
     background-color: #ffffff;
     font-family: helvetica;
     display: flex;
+
+   
 }
 /**MENU**/
 .nav {
@@ -90,4 +92,143 @@ body, .nav, .menu {
     justify-content: center;
     align-items: center;
 }
+/*LOGIN*/
+*,
+*:before,
+*:after{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
 
+.background{
+    width: 430px;
+    height: 520px;
+    position: absolute;
+    transform: translate(-50%,-50%);
+    left: 50%;
+    top: 50%;
+    
+}
+.background .shape{
+    height: 200px;
+    width: 200px;
+    position: absolute;
+    border-radius: 50%;
+}
+.shape:first-child{
+    
+    left: 45px;
+    top: -80px;
+    height: 150px;
+    width: 250px;
+  
+}
+
+form{
+    height: 520px;
+    width: 400px;
+    background-color: rgba(255,255,255,0.13);
+    position: absolute;
+    transform: translate(-50%,-50%);
+    top: 50%;
+    left: 50%;
+    border-radius: 10px;
+    backdrop-filter: blur(60px);
+    
+    border: 2px solid rgba(255,255,255,0.1);
+    box-shadow: 0 0 40px rgba(8,7,16,0.6);
+    padding: 50px 35px;
+}
+form *{
+    font-family: helvetica;
+    color: #000000;
+    letter-spacing: 0.5px;
+    outline: none;
+    border: none;
+}
+form h3{
+    font-size: 32px;
+    font-weight: 500;
+    line-height: 42px;
+    text-align: center;
+}
+
+label{
+    display: block;
+    margin-top: 30px;
+    font-size: 16px;
+    font-weight: 500;
+}
+input{
+    display: block;
+    height: 50px;
+    width: 100%;
+    background-color: rgba(255,255,255,0.07);
+    border-radius: 3px;
+    padding: 0 10px;
+    margin-top: 8px;
+    font-size: 14px;
+    font-weight: 300;
+}
+::placeholder{
+    color: #756c6c;
+    font-style: italic;
+}
+button{
+    
+    margin-top: 50px;
+    width: 100%;
+    background-color: #219CE1;;
+    color: #080710;
+    padding: 15px 0;
+    font-size: 18px;
+    font-weight: 600;
+    border-radius: 5px;
+    cursor: pointer;
+}
+button a{
+    text-decoration: none;
+}
+button:hover{
+    background-color: #2f6585;
+}
+.social{
+  margin-top: 30px;
+  display: flex;
+}
+.social div{
+  background: rgb(255, 150, 150);
+  width: 150px;
+  border-radius: 3px;
+  padding: 5px 10px 10px 5px;
+  background-color: rgba(255, 255, 255, 0.034);
+  color: #000000;
+  text-align: center;
+}
+.social div:hover{
+  background-color: #7e8c94;;
+}
+.social .fb{
+  margin-left: 25px;
+}
+.social i{
+  margin-right: 4px;
+}
+.container{
+    position: absolute;
+    top: 450px;
+    backdrop-filter: blur(20px);
+}
+#italic{
+    font-family: helvetica;
+    font-style: italic;
+    font-size: 20px;
+}
+/**FUNDO IMG**/
+#fundoimg{
+    position: absolute;
+    top: 420px;
+    left: 683px;
+   
+}
