--- a/landingpage/main.css
+++ b/landingpage/main.css
@@ -96,15 +96,11 @@ body, .nav, .menu {
     position: absolute;
     top: 0px;
     left: -110px;
-    height: 400px;
+    height: 15%;
 }
 .carro img{
-    width: 30%;
-    height: 400px;
-    width: 1368px;
-
-}
-#carroimg{
+    width: 100%;
+    height: 32em;
 }
 #setadir{
 width: 7%;
@@ -119,8 +115,10 @@ transform: rotate(180deg);
 position: relative;
 left: 800px;
 }
-.pontos{
-    flex-direction: row;    
+#pontos{
+    width: 15%;
+    height: 15%;
+    padding-left: 40%;
 }
 
 
