--- a/landingpage/main.css
+++ b/landingpage/main.css
@@ -97,10 +97,12 @@ body, .nav, .menu {
     top: 0px;
     left: -110px;
     height: 15%;
+    width: 108%;
+    
 }
 .carro img{
-    width: 100%;
-    height: 32em;
+    width: 1475px;
+    height: 22em;
 }
 #setadir{
 width: 7%;
@@ -120,5 +122,29 @@ left: 800px;
     height: 15%;
     padding-left: 40%;
 }
+.blur{
+    background-color: #ffffff41;
+    position: absolute;
+    top:0px;
+    width: 100%;
+    height: 352px;
+    backdrop-filter: blur(5.3px);
+}
+#maintxt{
+    position: absolute;
+    top: 100px;
+    left: 650px;
+    color: rgb(255, 255, 255);
+    text-shadow:
+      0 0 7px rgb(14, 37, 168),
+      0 0 10px #fff,
+      0 0 21px #fff,
+      0 0 42px rgb(54, 58, 57),
+      0 0 82px rgb(54, 58, 57),
+      0 0 92px rgb(54, 58, 57),
+      0 0 102px rgb(54, 58, 57),
+      0 0 151px rgb(54, 58, 57);
+      text-shadow: [x-offset] [y-offset] [color];
+      font-size: 60px;
 
-
+}
