--- a/landingpage/main.css
+++ b/landingpage/main.css
@@ -101,7 +101,7 @@ body, .nav, .menu {
     
 }
 .carro img{
-    width: 1475px;
+    width: 100%;
     height: 22em;
 }
 #setadir{
@@ -129,22 +129,21 @@ left: 800px;
     width: 100%;
     height: 352px;
     backdrop-filter: blur(5.3px);
-}
-#maintxt{
+}   
+#logo{
     position: absolute;
+    width: 250px;
+    height: 150px;
+    left: 540px;
     top: 100px;
-    left: 650px;
-    color: rgb(255, 255, 255);
-    text-shadow:
-      0 0 7px rgb(14, 37, 168),
-      0 0 10px #fff,
-      0 0 21px #fff,
-      0 0 42px rgb(54, 58, 57),
-      0 0 82px rgb(54, 58, 57),
-      0 0 92px rgb(54, 58, 57),
-      0 0 102px rgb(54, 58, 57),
-      0 0 151px rgb(54, 58, 57);
-      text-shadow: [x-offset] [y-offset] [color];
-      font-size: 60px;
-
+}
+.imgs{
+    display: flex;
+}
+#img1{
+    width: 550px;
+    height: 300px;
+    position: absolute;
+    top: 400px;
+    left: 50px;
 }
