--- a/promoções/promo.css
+++ b/promoções/promo.css
@@ -297,7 +297,8 @@ i {
     display: flex;
     flex-direction: row;
     border-radius: 80px;
-    
+    color: #fff;
+    margin: auto;
    
 }
 
@@ -307,7 +308,7 @@ i {
     left: 225px;
     background-color: #219CE1;
     width: 30%;
-    height: 30%;
+    height: 35%;
     border-radius: 20px;
    transition: 0.3s;
 
@@ -316,7 +317,10 @@ i {
 #block1:hover{
     opacity: 1;
     background-color: #3d68df;
+
 }
+
+
 #block2{
     
     position: absolute;
@@ -324,7 +328,7 @@ i {
     left: 825px;
     background-color: #219CE1;
     width: 30%;
-    height: 30%;
+    height: 35%;
     border-radius: 20px;
     transition: 0.3s;
   }
@@ -339,7 +343,7 @@ i {
     left: 225px;
     background-color: #219CE1;
     width: 30%;
-    height: 30%;
+    height: 32%;
     border-radius: 20px;
     transition: 0.3s;
     
@@ -355,7 +359,7 @@ i {
     left: 825px;
     background-color: #219CE1;
     width: 30%;
-    height: 30%;
+    height: 32%;
     border-radius: 20px;
     transition: 0.3s;
     
@@ -370,7 +374,8 @@ i {
     left: 225px;
     background-color: #219CE1;
     width: 30%;
-    height: 30%;
+    height: 32%;
+    
     border-radius: 20px;
     transition: 0.3s;
 }
@@ -384,7 +389,8 @@ i {
     left: 825px;
     background-color: #219CE1;
     width: 30%;
-    height: 30%;
+    height: 32%;
+    
     border-radius: 20px;
     transition: 0.3s;
 }
@@ -392,17 +398,94 @@ i {
     opacity: 1;
     background-color: #3d68df;
 }
-#block7{
+
+/**btn**/
+
+button {
+    position: relative;
+    display: inline-block;
+    cursor: pointer;
+    outline: none;
+    border: 0;
+    vertical-align: middle;
+    text-decoration: none;
+    background: transparent;
+    padding: 0;
+    font-size: inherit;
+    font-family: inherit;
+    margin-left: 100px;
+   }
+   
+   button.learn-more {
+    width: 12rem;
+    height: auto;
+   }
+   
+   button.learn-more .circle {
+    transition: all 0.45s cubic-bezier(0.65, 0, 0.076, 1);
+    position: relative;
+    display: block;
+    margin: 0;
+    width: 3rem;
+    height: 3rem;
+    background-color: #182d66;
+    border-radius: 1.625rem;
+   }
+   
+   button.learn-more .circle .icon {
+    transition: all 0.45s cubic-bezier(0.65, 0, 0.076, 1);
     position: absolute;
-    margin-top: 1850px;
-    left: 225px;
-    background-color: #219CE1;
-    width: 30%;
-    height: 30%;
-    border-radius: 20px;
-    transition: 0.3s;
-}
-#block7:hover{
-    opacity: 1;
-    background-color: #3d68df;
-}
+    top: 0;
+    bottom: 0;
+    margin: auto;
+    background: #fff;
+   }
+   
+   button.learn-more .circle .icon.arrow {
+    transition: all 0.45s cubic-bezier(0.65, 0, 0.076, 1);
+    left: 0.625rem;
+    width: 1.125rem;
+    height: 0.125rem;
+    background: none;
+   }
+   
+   button.learn-more .circle .icon.arrow::before {
+    position: absolute;
+    content: "";
+    top: -0.29rem;
+    right: 0.0625rem;
+    width: 0.625rem;
+    height: 0.625rem;
+    border-top: 0.125rem solid #fff;
+    border-right: 0.125rem solid #fff;
+    transform: rotate(45deg);
+   }
+   
+   button.learn-more .button-text {
+    transition: all 0.45s cubic-bezier(0.65, 0, 0.076, 1);
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    padding: 0.75rem 0;
+    margin: 0 0 0 1.85rem;
+    color: #ffffff;
+    font-weight: 700;
+    line-height: 1.6;
+    text-align: center;
+    text-transform: uppercase;
+   }
+   
+   button:hover .circle {
+    width: 100%;
+   }
+   
+   button:hover .circle .icon.arrow {
+    background: #fff;
+    transform: translate(1rem, 0);
+   }
+   
+   button:hover .button-text {
+    color: #fff;
+   }
