--- a/landingpage/main.css
+++ b/landingpage/main.css
@@ -144,10 +144,33 @@ left: 800px;
     top: 400px;
     right: 130px;
 }
+.img1{
+    background-color: blue;
+}
+.img2{
+    background-color: orange;
+}
+.img3{
+    background-color: red;
+}
+.img4{
+    background-color: purple;
+}
+.img5{
+    background-color: pink;
+}
+.img6{
+    background-color: green;
+}
+.img7{
+    background-color: yellow;
+}
 .scroll{
 margin-top: 45%;
 }
 .scroll div{
+    width: 100%;
+    height: 100px;
     margin-top: 25%;
     display: flex;
 }
