--- a/landingpage/main.css
+++ b/landingpage/main.css
@@ -169,8 +169,13 @@ left: 800px;
 margin-top: 45%;
 }
 .scroll div{
-    width: 100%;
+    width: 400%;
     height: 100px;
     margin-top: 25%;
     display: flex;
+}
+.scroll img{
+    width: 550px;
+    height: 300px;
+    position: absolute;
 }
